fixed collapse height bug

--- a/app/assets/stylesheets/blacklight/_facets.css.scss
+++ b/app/assets/stylesheets/blacklight/_facets.css.scss
@@ -184,6 +184,10 @@ ul.facet_extended_list
       overflow: hidden;
       height: 0;
     }
+
+    &.collapse.in {
+      height: auto !important;
+    }
   }
 }
 
